Add logout feauture

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 		    			FB.login();
 		  			}
 				});
+
+				FB.logout(function(response) {
+  					// user is now logged out
+				});
 		  	};
 
 			(function(d, s, id) {
