--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			      appId            : 203968780201183,
 			      autoLogAppEvents : true,
 			      xfbml            : true,
-			      version          : 'v2.12'
-			      status 	       : true; /* reduces time wasted in checking if the user is logged in or not */
+			      version          : 'v2.12',
+			      status 	       : true /* reduces time wasted in checking if the user is logged in or not */
 		  	  	});
 
 		  	  	FB.getLoginStatus(function(response) {
@@ -42,7 +42,36 @@
 			} (document, 'script', 'facebook-jssdk'));
 		</script>
 
+		<script>
+			var finished_rendering = function() {
+			  console.log("finished rendering plugins");
+			  var spinner = document.getElementById("spinner");
+			  spinner.removeAttribute("style");
+			  spinner.removeChild(spinner.childNodes[0]);
+			}
+			FB.Event.subscribe('xfbml.render', finished_rendering);
+		</script>
+
+		<div id="spinner"
+		    style="
+		        background: #4267b2;
+		        border-radius: 5px;
+		        color: white;
+		        height: 40px;
+		        text-align: center;
+		        width: 250px;">
+		    Loading
+		    <div
+		    	class="fb-login-button"
+		    	data-max-rows="1"
+		    	data-size="large"
+		    	data-button-type="continue_with"
+		    	data-use-continue-as="true"
+		    ></div>
+		</div>
+
 		<h1>Vendez Vous</h1>
+		<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div>
 
   </body>
 </html>
