--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		</div>
 
 		<h1>Vendez Vous</h1>
-		<div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div>
+		<!-- <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="true" data-use-continue-as="true"></div> -->
 
   </body>
 </html>
