--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   	</head>
 
   	<body>
+  		<h1>Vendez Vous</h1>
 		<!-- Call to The Facebook SDK for JavaScript -->
-		<script>
+		<!-- <script>
   	  		window.fbAsyncInit = function() {
 		    	FB.init({
 			      appId            : 203968780201183,
@@ -69,9 +70,88 @@
 		    	class="fb-login-button"
 		    	data-max-rows="1"
 		    	data-size="large"
-		    	data-button-type="continue_with"
+		    	data-button-type="login_with"
+		    	data-show-faces="false"
+		    	data-auto-logout-link="true"
 		    	data-use-continue-as="true"
 		    ></div>
-		</div>
+		</div> -->
+
+
+		<script>
+			// This is called with the results from from FB.getLoginStatus().
+  function statusChangeCallback(response) {
+    console.log('statusChangeCallback');
+    console.log(response);
+
+    if (response.status === 'connected') {
+      // Logged into your app and Facebook.
+      // testAPI();
+      redirect();
+    } else {
+      // The person is not logged into your app or we are unable to tell.
+      document.getElementById('status').innerHTML = 'Please log ' +
+        'into this app.';
+    }
+  }
+
+  function checkLoginState() {
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+    });
+  }
+
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : 203968780201183,
+      cookie     : true,  // enable cookies to allow the server to access 
+                          // the session
+      xfbml      : true,  // parse social plugins on this page
+      version    : 'v2.12', // use graph api version 2.8
+      autoLogAppEvents : true,
+      status 	 : true /* reduces time wasted in checking if the user is logged in or not */
+    });
+
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+    });
+
+  };
+
+  // Load the SDK asynchronously
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+  // Here we run a very simple test of the Graph API after login is
+  // successful.  See statusChangeCallback() for when this call is made.
+  function testAPI() {
+    console.log('Welcome!  Fetching your information.... ');
+    FB.api('/me', function(response) {
+      console.log('Successful login for: ' + response.name);
+      document.getElementById('status').innerHTML =
+        'Thanks for logging in, ' + response.name + '!';
+    });
+  }
+
+    function redirect() {
+    	var url = "https://xpac.tech";
+    	window.location(url);
+    }
+</script>
+
+<!--
+  Below we include the Login Button social plugin.
+-->
+
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+</fb:login-button>
+
+<div id="status">
+</div>
   </body>
 </html>
