--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
-      // testAPI();
-      redirect();
+      testAPI();
+      // redirect();
     } else {
       // The person is not logged into your app or we are unable to tell.
       document.getElementById('status').innerHTML = 'Please log ' +
