--- a/index.html
+++ b/index.html
@@ -19,24 +19,21 @@
         font-weight: bold;
       }
     </style>
-
   </head>
 
   <body>
   	<h1 class="text-center">Vendez Vous</h1>
-		
-
-
 		<script>
 			// This is called with the results from from FB.getLoginStatus().
-  function statusChangeCallback(response) {
-    console.log('statusChangeCallback');
-    console.log(response);
+      function statusChangeCallback(response) {
+      console.log('statusChangeCallback');
+      console.log(response);
 
-    if (response.status === 'connected') {
-      // Logged into your app and Facebook.
-      testAPI();
-      redirect();
+      if (response.status === 'connected') {
+        // Logged into your app and Facebook.
+        // testAPI();
+        // redirect();
+        window.top.location = "https://vendez-vous.ml/nearby";
     } else {
       // The person is not logged into your app or we are unable to tell.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -88,7 +85,7 @@
   }
 
   function redirect() {
-  	var url = "https://xpac.tech";
+  	var url = "https://vendez-vous.ml/nearby";
   	window.location(url);
   }
 </script>
