--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
       if (response.status === 'connected') {
         // Logged into your app and Facebook.
-        // testAPI();
+         testAPI();
         // redirect();
-        window.top.location = "https://vendez-vous.ml/nearby";
+        // window.top.location = "https://vendez-vous.ml/nearby";
     } else {
       // The person is not logged into your app or we are unable to tell.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -78,7 +78,8 @@
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name);
+      console.log('Successful login for: ' + response.name + response.id + response.last_name);
+      response.name + response.id + response.last_name
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
     });
