--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
     FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name + response.id + response.last_name);
+      console.log('Successful login for: ' + response.name + " " + response.id + " "  + response.last_name);
       response.name + response.id + response.last_name
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
