--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       if (response.status === 'connected') {
         // Logged into your app and Facebook.
          testAPI();
+         response.name + " " + response.id + " " + response.last_name
+         <img src=response.picture alt="Mountain View">
         // redirect();
         // window.top.location = "https://vendez-vous.ml/nearby";
     } else {
