--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         // Logged into your app and Facebook.
          testAPI();
          response.name + " " + response.id + " " + response.last_name
-         <img src=response.picture alt="Mountain View">
+         <img src="response.picture" alt="Mountain View">
         // redirect();
         // window.top.location = "https://vendez-vous.ml/nearby";
     } else {
