add button for profile

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         // Logged into your app and Facebook.
          testAPI();
          getInfo();
-        // redirect();
-        // window.top.location = "https://vendez-vous.ml/nearby";
+        window.top.location = "https://vendez-vous.ml/nearby";
     } else {
       // The person is not logged into your app or we are unable to tell.
       document.getElementById('status').innerHTML = 'Please log ' +
@@ -84,11 +83,6 @@
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
     });
-  }
-
-  function redirect() {
-  	var url = "https://vendez-vous.ml/nearby";
-  	window.location(url);
   }
 
   function getInfo() {
