--- a/nearby/index.html
+++ b/nearby/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
 	<title>Vendez Vous</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- meta tag to make the website Search Engine friendly-->
+    <meta name="HandheldFriendly" content="True">
+    <style type="text/css"></style>
 </head>
 
 <body>
-	<h1>Users nearby you available for meeting</h1>
+	<h1 class="text-center">Users nearby you available for meeting</h1>
+	<button type="button" onclick="<a href='https://vendez-vous.ml/profile'">Profile</button>
 </body>
 </html>
