link button with profile

--- a/nearby/index.html
+++ b/nearby/index.html
@@ -11,6 +11,7 @@
 
 <body>
 	<h1 class="text-center">Users nearby you available for meeting</h1>
-	<button type="button" onclick="<a href='https://vendez-vous.ml/profile'">Profile</button>
+	<script> <button type="button" onclick="window.location.href='https://vendez-vous.ml/profile';">Profile</button></script>
+	
 </body>
 </html>
