--- a/profile/index.html
+++ b/profile/index.html
@@ -4,10 +4,14 @@
 	<title>Vendez Vous</title>
 	<meta charset="utf-8">
 	<style type="text/css"></style>
+	<script type="text/javascript"></script>
 </head>
 <body>
 	<h1>Name</h1>
 	<h1>About</h1>
 	<h1>Interests</h1>
+
+	<button onclick="location.href='https://vendez-vous.ml/nearby'" type="button"> Users Available
+	</button>
 </body>
 </html>
