Connections between all 3 pages work

--- a/nearby/index.html
+++ b/nearby/index.html
@@ -11,7 +11,8 @@
 
 <body>
 	<h1 class="text-center">Users nearby you available for meeting</h1>
-	<script> <button type="button" onclick="window.location.href='https://vendez-vous.ml/profile';">Profile</button></script>
 	
+	<button onclick="location.href='https://vendez-vous.ml/profile'" type="button">
+     Profile</button>
 </body>
 </html>
