--- a/profile/index.html
+++ b/profile/index.html
@@ -13,5 +13,14 @@
 
 	<button onclick="location.href='https://vendez-vous.ml/nearby'" type="button"> Users Available
 	</button>
+
+	<button onclick="location.href='https://vendez-vous.ml'; FB.logout();" type="button"> Logout
+	</button>
+
+	<!-- FB.logout(function(response) {
+  // user is now logged out
+}); -->
+
+<!-- <a href="/delete" onclick="FB.logout();">Logout</a> Use it for the delte account button, here /logout is a function which deletes the user's account -->
 </body>
 </html>
