--- a/profile/index.html
+++ b/profile/index.html
@@ -17,7 +17,7 @@
 	<button onclick="location.href='https://vendez-vous.ml/nearby'" type="button"> Users Available
 	</button>
 
-	<button onclick="location.href='https://vendez-vous.ml'; FB.logout();" type="button"> Logout
+	<button onclick="FB.logout(); location.href='https://vendez-vous.ml';" type="button"> Logout
 	</button>
 
 	<!-- FB.logout(function(response) {
