--- a/profile/index.html
+++ b/profile/index.html
@@ -42,7 +42,7 @@
     function handleSessionResponse(response) {
     //if we dont have a session (which means the user has been logged out, redirect the user)
     if (response.status == 'connected') {
-				FB.logout(function(session)) {window.location = "https://vendez-vous.ml";}
+				FB.logout(function(response)) {window.location = "https://vendez-vous.ml";}
         return;
     }
 
