--- a/nearby/index.html
+++ b/nearby/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
 	<title>Vendez Vous</title>
+	<base href="/">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- meta tag to make the website Search Engine friendly-->
-    <meta name="HandheldFriendly" content="True">
-    <style type="text/css"></style>
+  <!-- meta tag to make the website Search Engine friendly-->
+  <meta name="HandheldFriendly" content="True">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <style type="text/css"></style>
 </head>
 
 <body>
 	<h1 class="text-center">Users nearby you available for meeting</h1>
-	
+
 	<button onclick="location.href='https://vendez-vous.ml/profile'" type="button">
      Profile</button>
 </body>
