--- a/index.html
+++ b/index.html
@@ -16,12 +16,37 @@
     h1 {
       font-size: 64px;
       font-weight: bold;
+			text-align:center;
     }
+
+		h2 {
+			text-align: center;
+		}
+
+		button{
+
+		}
   </style>
 </head>
 
 <body>
-	<h1 class="text-center">Vendez Vous</h1>
+	<div class="center" id="Heading">
+		<h1>Vendez Vous</h1>
+	</div>
+
+	<div class="center" id=" Main-Description">
+		<h2>The app that helps you network over meals, based on your conversation interests.</h2>
+	</div>
+
+	<div class="center" id="Description">
+		<h3></h3>
+	</div>
+
+	<div class="center" id="login-button">
+		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+		</fb:login-button>
+	</div>
+
 	<script>
 		// This is called with the results from from FB.getLoginStatus().
     function statusChangeCallback(response) {
@@ -35,8 +60,7 @@
 	      	window.top.location = "https://vendez-vous.ml/nearby";
 	  	} else {
 	    	// The person is not logged into your app or we are unable to tell.
-	    	document.getElementById('status').innerHTML = 'Please log ' +
-	      'into this app.';
+	    	document.getElementById('status').innerHTML = 'Please login through your Facebook account';
 	  	}
 		}
 
@@ -88,13 +112,6 @@
 	  	});
 		}
 	</script>
-
-	<!--
-	Below we include the Login Button social plugin.
-	-->
-
-	<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-	</fb:login-button>
 
 	<div id="status"></div>
 </body>
