--- a/profile/index.html
+++ b/profile/index.html
@@ -8,17 +8,60 @@
   <!-- meta tag to make the website Search Engine friendly-->
   <meta name="HandheldFriendly" content="True">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<style type="text/css"></style>
+	<style type="text/css">
+		h1 {
+			font-size: 64px;
+			font-weight: bold;
+			text-align:center;
+		}
+
+		h2 {
+
+		}
+
+		button {
+			float: right;
+		}
+	</style>
 </head>
 
 <body>
-	<h1>Name</h1>
-	<h1>About</h1>
-	<h1>Interests</h1>
+	<div class="center" id="Heading">
+		<h1>Profile</h1>
+	</div>
 
-	<button onclick="location.href='https://vendez-vous.ml/nearby'" type="button"> Users Available
-	</button>
+	<button onclick="location.href='https://vendez-vous.ml/nearby'" type="button">Users Available</button>
+	<br>
 	<button onclick="javascript:logout();">Logout from Facebook</button>
+
+	<div class="center" id="SubHeadings">
+		<div class="Name">
+			<form action="/action_page.php">
+	  		<h2>Name</h2>
+	  		<input type="text" name="name">
+	  		<br><br>
+				<input type="submit" value="Save">
+			</form>
+		</div>
+
+		<div class="center" id="About">
+			<form action="/action_page.php">
+	  		<h2>About</h2>
+	  		<input type="text" name="about">
+	  		<br><br>
+				<input type="submit" value="Save">
+			</form>
+		</div>
+
+		<div class="center" id="Interests">
+			<form action="/action_page.php">
+	  		<h2>Interests</h2>
+	  		<input type="text" name="interests">
+	  		<br><br>
+				<input type="submit" value="Save">
+			</form>
+		</div>
+	</div>
 
 	<!-- <button onclick="handleSessionResponse(response)" type="button">Logout</button> -->
 
