Trying to add location services

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- meta tag to make the website Search Engine friendly-->
   <meta name="HandheldFriendly" content="True">
+	<meta name="description=" content="Vendez Vous - The app that lets you network over meals, based on your conversation interests." />
+  <meta name="keywords" content="vendezvous, meals, tinder, network, interests, conversation" />
+  <meta property="og:title" content="Vendez Vous" />
+  <meta property="og:url" content="https://vendez-vous.ml" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/favicon.ico" />
+  <meta property="og:description" content="The app that lets you network over meals, based on your conversation interests." />
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -57,7 +64,7 @@
 	      // Logged into your app and Facebook.
 	       testAPI();
 	       getInfo();
-	      	window.top.location = "https://vendez-vous.ml/nearby";
+	       window.top.location = "https://vendez-vous.ml/nearby";
 	  	} else {
 	    	// The person is not logged into your app or we are unable to tell.
 	    	document.getElementById('status').innerHTML = 'Please login through your Facebook account';
