--- a/profile/index.html
+++ b/profile/index.html
@@ -8,14 +8,15 @@
   <!-- meta tag to make the website Search Engine friendly-->
   <meta name="HandheldFriendly" content="True">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<!-- Adding Google Font API -->
+	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
 	<style type="text/css">
 		.heading h1 {
 			font-size: 64px;
-			/* font-family: "Amatic SC--Menu"; */
-			/* font-family: sans-serif; */
+			font-family: 'Indie Flower', sans-serif;
 			text-align:center;
 			background-color: rgb(124, 124, 224);
-			color: rgb(255, 153, 0);
+			color: white;
 			margin: 0;
 		}
 
