Adding https functionality

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 	<meta name="description=" content="Vendez Vous - The app that lets you network over meals, based on your conversation interests." />
   <meta name="keywords" content="vendezvous, meals, tinder, network, interests, conversation" />
   <meta property="og:title" content="Vendez Vous" />
-  <meta property="og:url" content="https://vendez-vous.ml" />
+  <meta property="og:url" content="https://vendez-vous.github.io" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/favicon.ico" />
   <meta property="og:description" content="The app that lets you network over meals, based on your conversation interests." />
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <!-- Bootstrap JS -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <style>
     h1 {
       font-size: 64px;
@@ -64,7 +62,7 @@
 	      // Logged into your app and Facebook.
 	       testAPI();
 	       getInfo();
-	       window.top.location = "https://vendez-vous.ml/nearby";
+	       window.top.location = "https://vendez-vous.github.io/nearby";
 	  	} else {
 	    	// The person is not logged into your app or we are unable to tell.
 	    	document.getElementById('status').innerHTML = 'Please login through your Facebook account';
@@ -121,5 +119,11 @@
 	</script>
 
 	<div id="status"></div>
+
+	<!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
 </html>
