--- a/profile/index.html
+++ b/profile/index.html
@@ -8,6 +8,7 @@
   <!-- meta tag to make the website Search Engine friendly-->
   <meta name="HandheldFriendly" content="True">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<!-- Adding Google Font API -->
 	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
 	<style type="text/css">
@@ -38,7 +39,7 @@
 		<h1>Profile</h1>
 	</div>
 
-	<button onclick="location.href='https://vendez-vous.ml/nearby'" type="button">Users Available</button>
+	<button onclick="location.href='https://vendez-vous.github.io/nearby'" type="button">Users Available</button>
 	<br>
 	<button onclick="javascript:logout();">Logout from Facebook</button>
 
@@ -98,5 +99,11 @@
 	  	});
 		}
 	</script>
+
+	<!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
 </html>
