working on logout agian

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	       testAPI();
 	       getInfo();
 	       window.top.location = "https://vendez-vous.github.io/nearby";
+				 var accessToken = response.authResponse.accessToken;
 	  	} else {
 	    	// The person is not logged into your app or we are unable to tell.
 	    	document.getElementById('status').innerHTML = 'Please login through your Facebook account';
