--- a/profile/index.html
+++ b/profile/index.html
@@ -73,6 +73,8 @@
 	<!-- <a href="/delete" onclick="FB.logout();">Logout</a> Use it for the delte account button, here /logout is a function which deletes the user's account -->
 
 	<script>
+		function statusChangeCallback(response) {}
+
 		window.fbAsyncInit = function() {
 	    FB.init({
 	      appId      : 203968780201183,
@@ -95,6 +97,7 @@
 
 		function logout() {
 	    FB.logout(function(response) {
+		    statusChangeCallback(response);
 	    	// user is now logged out
 	  	});
 		}
